--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ asgiref==3.4.1
 Django==3.2.7
 gunicorn==20.1.0
 pytz==2021.1
+Pyrebase==3.0.27
+Pillow==8.3.2
 sqlparse==0.4.2
 typing-extensions==3.10.0.2
